--- a/layouts/_default/index.html
+++ b/layouts/_default/index.html
@@ -25,7 +25,23 @@
     </div>
   </section>
 
-  <!-- Featured Posts Section -->
+</div>
+
+
+
+
+
+
+
+<div class="content">
+<article>
+{{ .Content }}
+</article>
+</div>
+{{ partial "listposts.html" . }}
+
+<div class="home">
+ <!-- Featured Posts Section -->
   <section class="blog-section featured-posts">
     <h2>{{ i18n "sections" }}</h2>
     <div class="post-list">
@@ -42,8 +58,6 @@
       {{ end }}
     </div>
   </section>
-
-
 </div>
 
 
@@ -52,10 +66,5 @@
 
 
 
-<div class="content">
-<article>
-{{ .Content }}
-</article>
-</div>
-{{ partial "listposts.html" . }}
+
 {{ end }}
