--- a/public/css/nav.css
+++ b/public/css/nav.css
@@ -1,4 +1,3 @@
-
 /* General Styles */
 .navbar {
   display: flex;
@@ -6,10 +5,10 @@
   align-items: center;
   color: #ddd;
 }
-.navbar h1 {
+.navbar .logo {
    margin: 10px;
 }
-.navbar h1 a:hover {
+.navbar .logo a:hover {
    text-decoration: none;
 }
 
