--- a/assets/css/nav.css
+++ b/assets/css/nav.css
@@ -5,8 +5,9 @@
   align-items: center;
   color: #ddd;
 }
-.navbar .logo {
-   margin: 10px;
+.navbar .logo a {
+   font-size: 20px;
+   font-weight: bold;
 }
 .navbar .logo a:hover {
    text-decoration: none;
