--- a/assets/css/nav.css
+++ b/assets/css/nav.css
@@ -108,7 +108,7 @@
     display: none;
     flex-direction: column;
     width: 100%;
-    padding: 0;
+    padding: 10px 0px 0px 0px;
     background-color: #121212;
   }
 
@@ -132,7 +132,6 @@
     position: absolute;
     top: 10px;
     right: 20px;
-   margin-bottom: 10px;
   }
 
   /* Dropdown for mobile */
