--- a/public/css/nav.css
+++ b/public/css/nav.css
@@ -108,7 +108,7 @@
     display: none;
     flex-direction: column;
     width: 100%;
-    padding: 10px 0px 0px 0px;
+    padding: 0;
     background-color: #121212;
   }
 
