--- a/layouts/partials/nav.html
+++ b/layouts/partials/nav.html
@@ -1,15 +1,11 @@
-
 <nav class="navbar">
+  <div class="logo">
+    <a href="https://eens.netlify.app">(&tau;) Extra Ecclesiam Nulla Salus</a>
+  </div>
 
-<div class="logo">
-<a href="https://eens.netlify.app">
-(&tau;) Extra Ecclesiam Nulla Salus
-</a>
-</div>
-
-<div class="banner">
-<img src="/images/banner.png"/>
-</div>
+  <div class="banner">
+    <img src="/images/banner.png" alt="Site Banner" />
+  </div>
 
   <div class="hamburger">
     <div class="line"></div>
@@ -20,19 +16,12 @@
   <ul class="nav-links">
     {{ $currentPage := . }}
     {{ range .Site.Menus.main }}
-      {{ if not .HasChildren }} <!-- If there are no submenus -->
-        <li>
-          <a href="{{ .URL }}" class="{{ if eq $currentPage.RelPermalink .URL }}active{{ end }}">
-            {{ with .Pre }}{{ . | safeHTML }}{{ end }}
-            {{ .Name }}
-          </a>
-        </li>
-      {{ else }} <!-- If there are submenus -->
-        <li class="dropdown">
-          <a href="{{ .URL }}" class="{{ if eq $currentPage.RelPermalink .URL }}active{{ end }}">
-            {{ with .Pre }}{{ . | safeHTML }}{{ end }}
-            {{ .Name }}
-          </a>
+      <li class="{{ if .HasChildren }}dropdown{{ end }}">
+        <a href="{{ .URL }}" class="{{ if eq $currentPage.RelPermalink .URL }}active{{ end }}">
+          {{ with .Pre }}{{ . | safeHTML }}{{ end }}
+          {{ .Name }}
+        </a>
+        {{ if .HasChildren }}
           <ul class="dropdown-menu">
             {{ range .Children }}
               <li>
@@ -42,9 +31,8 @@
               </li>
             {{ end }}
           </ul>
-        </li>
-      {{ end }}
+        {{ end }}
+      </li>
     {{ end }}
   </ul>
-  
 </nav>
