--- a/assets/css/nav.css
+++ b/assets/css/nav.css
@@ -1,9 +1,5 @@
 
 /* General Styles */
-body {
-  font-family: 'Roboto', sans-serif;
-}
-
 .navbar {
   display: flex;
   flex-direction: column;
@@ -38,24 +34,27 @@ body {
 
 .nav-links {
   display: flex;
+  justify-content: space-between; /* Spread items evenly across the width */
   align-items: center;
   list-style: none;
   margin: 0;
   padding: 0;
+  width: 100%; /* Use the full width of the container */
 }
 
 .nav-links li {
-  margin: 0 15px;
+  flex: 1; /* Distribute items evenly across the width */
+  text-align: center; /* Center text within each item */
   position: relative;
 }
 
 .nav-links a {
   color: #ddd;
-  text-decoration: none;
+  text-decoration: none; /* Remove underline */
   font-size: 1.2rem;
   padding: 10px;
   border-radius: 5px;
-  transition: all 0.3s ease-in-out;
+  transition: color 0.3s ease-in-out, background-color 0.3s ease-in-out;
 }
 
 .nav-links a.active {
@@ -66,7 +65,7 @@ body {
 
 .nav-links a:hover {
   color: #00ffcc;
-  background-color: rgba(0, 209, 178, 0.2);
+  background-color: rgba(0, 209, 178, 0.2); /* Subtle highlight effect */
 }
 
 /* Dropdown Menu */
@@ -102,7 +101,7 @@ body {
 
 .dropdown-menu a:hover {
   color: #00ffcc;
-  background-color: rgba(0, 209, 178, 0.2);
+  background-color: rgba(0, 209, 178, 0.2); /* Subtle highlight effect */
 }
 
 /* Hamburger Menu */
