--- a/assets/css/nav.css
+++ b/assets/css/nav.css
@@ -64,12 +64,12 @@
   left: 0;
   background-color: rgb(20,20,20);
   list-style: none;
-  padding: 10px 0; /* Refined padding */
   z-index: 1000;
+  padding: 0px 0px 0px 0px;
 }
 
 .dropdown-menu li {
-  padding: 0px;
+  padding: 0px 0px 0px 0px;
 }
 
 .dropdown-menu a {
@@ -78,6 +78,7 @@
   display: block;
   text-align: left; /* Left align submenu text */
   transition: color 0.3s ease-in-out, text-decoration 0.3s ease-in-out;
+  padding: 0px 0px 0px 0px;
 }
 
 .dropdown-menu a:hover {
