--- a/layouts/_default/single.html
+++ b/layouts/_default/single.html
@@ -12,7 +12,7 @@
 <a href="https://twitter.com/intent/tweet?
   url={{ .Permalink }}&
   text={{ .Params.twitterText }}&
-  via=YourTwitterHandle" 
+  via=BroMatthewCap" 
   target="_blank">
   Share on Twitter
 </a>
