--- a/layouts/_default/baseof.html
+++ b/layouts/_default/baseof.html
@@ -29,6 +29,14 @@
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
 
 {{ end }}
+
+<meta name="twitter:card" content="{{ .Params.image | absURL }}" />
+<meta name="twitter:site" content="@BroMatthewCap" />
+<meta name="twitter:creator" content="@BroMatthewCap" />
+<meta name="twitter:title" content="{{ .Title }}" />
+<meta name="twitter:description" content="{{ .Summary }}" />
+<meta name="twitter:image" content="{{ .Params.image | absURL }}" />
+
 {{ template "_internal/twitter_cards.html" . }}
 </head>
 
