--- a/layouts/partials/nav.html
+++ b/layouts/partials/nav.html
@@ -7,7 +7,9 @@
 </div>
 
 <div class="banner">
+<a href="https://eens.netlify.app">
 <img src="/images/banner.png"/>
+</a>
 </div>
 
   <div class="hamburger">
