--- a/layouts/_default/baseof.html
+++ b/layouts/_default/baseof.html
@@ -53,6 +53,7 @@
 </main>
 
 {{ partial "sidebar.html" . }}
+{{ partial "right-sidebar.html" . }}
 
 <footer>
 {{ $footerPartial := printf "partials/%s/footer.html" .Lang }}
