--- a/assets/css/sidebar.css
+++ b/assets/css/sidebar.css
@@ -104,6 +104,10 @@
 /* Responsive Design */
 @media (max-width: 768px) {
   .sidebar {
-    display: none;
+   display: none;
+  }
+
+  .sidebar:not(.collapsed) {
+    transform: translateX(0);
   }
 }
