--- a/assets/css/sidebar.css
+++ b/assets/css/sidebar.css
@@ -103,6 +103,9 @@
 
 /* Responsive Design */
 @media (max-width: 768px) {
+   .sidebar-content {
+      display: none;
+   }
   .sidebar {
     transform: translateX(-100%);
   }
