--- a/layouts/partials/sidebar.html
+++ b/layouts/partials/sidebar.html
@@ -28,6 +28,7 @@
 </div>
 
 
+</script>
 const sidebar = document.getElementById('sidebar');
 const toggleButton = document.getElementById('toggle-sidebar');
 
@@ -62,3 +63,4 @@ document.querySelectorAll('.sidebar-content ul > li > a.has-submenu').forEach(fu
     });
   }
 });
+</script>
