--- a/layouts/partials/sidebar.html
+++ b/layouts/partials/sidebar.html
@@ -28,7 +28,7 @@
 </div>
 
 
-</script>
+<script>
 const sidebar = document.getElementById('sidebar');
 const toggleButton = document.getElementById('toggle-sidebar');
 
